kubernetes/apps/apps/jellyfin/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
spec:
  type: ExternalName
  externalName: wireguard.network.svc.cluster.local
  ports:
    - name: http
      targetPort: 8097
      port: 8097
