kubernetes/apps/apps/jellyfin/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app jellyfin
  labels:
    # app.kubernetes.io/name: *app
    # app.kubernetes.io/instance: *app
    kubernetes.io/ingress.class: nginx-external
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "10G"
    nginx.ingress.kubernetes.io/client-max-buffer-size: "10G"
spec:
  ingressClassName: nginx-external
  rules:
    - host: &host jelly.icylair.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin-service
                port:
                  number: 8097
  tls:
  - hosts:
      - jelly.icylair.com
    secretName: icylair-com-prod
